client/css/stats/app.css
/* ... */
@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

#wrapper {
  display: block;
  min-height: 100%;
  position: relative;
  width: 100%;
  overflow: auto;
}

.navbar {
  z-index: 1;
}

a.nav-link-bright {
  color: rgba(255, 255, 255, 0.8);
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  text-decoration: none;
}

a.nav-link-bright:hover {
  color: white;
}

.masthead {
  padding-top: 200px;
}

.leaderboard {
  padding-top: 10px;
}

.stats-title {
  color: white;
  font-size: 16px;
  text-shadow: 0 2px 2px black;
}

/*
.btn-surviv {
  background-image: url("/img/ui/logo-surviv.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 36px;
  min-height: 48px;
  height: 100%;
}
*/

.stats-bg {
  background-repeat: no-repeat;
  background-size: cover;
  bottom: 0px;
  height: 400px;
  left: 0px;
  position: absolute;
  right: 0px;
  top: 0px;
  z-index: 0;
}

#my-profile {
  display: none;
}

#leaderboard-bg {
  background-image: url("/img/ui/stats_splash.png");
}

.leaderboard-error {
  margin-top: 80px;
}

.card-leaderboard {
  background-color: #80af49;
  border: none;
  color: white;
}

.card-row-top {
  height: 75px;
}

.leaderboard-title {
  font-size: 36px;
  font-weight: bold;
  text-shadow: 2px 2px 2px black;
}
@media (max-width: 823px) {
  .leaderboard-title {
    font-size: 32px;
    text-align: center;
  }
}

.leaderboard-opt {
  cursor: pointer;
  font-weight: bold;
}
@media (max-width: 823px) {
  .leaderboard-opt {
    font-size: 12px;
  }
}

#leaderboard-table {
  background-color: rgba(41, 49, 33, 0.95);
  border: 1px solid black;
  border-collapse: collapse;
  border-radius: 0px;
  color: white;
  margin: auto;
  margin-right: 0px;
  margin-top: 8px;
  text-align: left;
  width: 100%;
}

#leaderboard-table th {
  font-size: 18px;
}
@media (max-width: 991px) {
  #leaderboard-table th {
    font-size: 12px;
  }
}

#leaderboard-table tr {
  border-top: 1px solid rgba(0, 0, 0, 0.5);
}

#leaderboard-table td.data-rank {
  color: rgba(255, 255, 255, 0.5);
}

#leaderboard-table td.data-player-names {
  text-align: left;
}

@media (max-width: 991px) and (orientation: portrait) {
  #leaderboard-table td.data-region {
    display: none;
  }
}

#leaderboard-table tr.single-player:nth-child(-n + 3) > td.rank {
  color: gold;
}

#leaderboard-table tr.single-player:nth-child(-n + 3) > td {
  font-size: 24px;
}
@media (max-width: 991px) {
  #leaderboard-table tr.single-player:nth-child(-n + 3) > td {
    font-size: 14px;
  }
}

#leaderboard-table tr.multiple-players:nth-child(-n + 3) > td.rank {
  color: gold;
}

#leaderboard-table tr.multiple-players:nth-child(-n + 3) > td {
  font-size: 24px;
}
@media (max-width: 991px) {
  #leaderboard-table tr.multiple-players:nth-child(-n + 3) > td {
    font-size: 14px;
  }
}

/*
#leaderboard-table td.active {
  background-image: url("/img/ui/surviv.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 30px;
}
*/

#leaderboard-table tbody,
#leaderboard-table td,
#leaderboard-table th {
  padding: 8px;
  padding-left: 12px;
  font-size: 16px;
  text-align: center;
}
@media (max-width: 991px) {
  #leaderboard-table tbody,
  #leaderboard-table td,
  #leaderboard-table th {
    font-size: 16px;
  }
}

#leaderboard-table .header-rank {
  width: 5%;
}

#leaderboard-table .header-player {
  width: 30%;
  text-align: left;
}

#leaderboard-table .header-region {
  width: 10%;
}
@media (max-width: 991px) and (orientation: portrait) {
  #leaderboard-table .header-region {
    display: none;
  }
}

#leaderboard-table .header-active {
  width: 10%;
}

#leaderboard-table .header-stat {
  width: 15%;
}

#leaderboard-table .header-games {
  width: 10%;
}

.leaderboard-values span.player-name {
  display: block;
  max-width: 225px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}
@media (max-width: 991px) and (orientation: portrait) {
  .leaderboard-values span.player-name {
    font-size: 12px;
    max-width: 100px;
  }
}

.leaderboard-headers {
  background-color: #465c33;
}

.leaderboard-values > tr.main:nth-child(20n + 11),
.leaderboard-values > tr.main:nth-child(20n + 12),
.leaderboard-values > tr.main:nth-child(20n + 13),
.leaderboard-values > tr.main:nth-child(20n + 14),
.leaderboard-values > tr.main:nth-child(20n + 15),
.leaderboard-values > tr.main:nth-child(20n + 16),
.leaderboard-values > tr.main:nth-child(20n + 17),
.leaderboard-values > tr.main:nth-child(20n + 18),
.leaderboard-values > tr.main:nth-child(20n + 19),
.leaderboard-values > tr.main:nth-child(20n + 20) {
  background-color: rgba(0, 0, 0, 0.2);
}

.card-player {
  background-color: #80af49;
  border: none;
  color: white;
}
@media (max-width: 768px) {
  .card-player {
    height: 164px;
  }
}

.card-row-top {
  height: 75px;
}

.card-player-name {
  font-size: 28px;
  font-weight: bold;
  overflow: hidden;
  text-overflow: ellipsis;
  text-shadow: 2px 2px 2px black;
  white-space: nowrap;
}

.card-player-banned {
  color: gold;
  font-size: 18px;
  text-shadow: 1px 1px 1px black;
  font-weight: bold;
}

table.player-stats-overview {
  width: 100%;
}
table.player-stats-overview th {
  color: gold;
  font-size: 18px;
  text-align: center;
  text-shadow: 1px 1px 1px black;
}
table.player-stats-overview td {
  font-size: 28px;
  font-weight: bold;
  line-height: 32px;
  text-align: center;
  text-shadow: 2px 2px 2px black;
}
table.player-stats-overview th:first-child,
table.player-stats-overview td:first-child {
  padding-right: 20px;
}
@media (max-width: 823px) {
  table.player-stats-overview td {
    font-size: 18px;
    text-shadow: 1px 1px 1px black;
  }
}
/* ... */

